--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "server",
+  "name": "movie-database-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Movie database server with Express and MySQL",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.0"
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
